syntax = "proto3";
option java_package = "sensordata";

message Measurements {
  double power      = 1;
  double rotorSpeed = 2;
  double windSpeed  = 3;
}